[FIX] calendar task

--- a/static/src/scss/tree_width.scss
+++ b/static/src/scss/tree_width.scss
@@ -57,7 +57,7 @@
 }
 
 .o_calendar_renderer .fc-view .o_calendar_color_6.fc-event .fc-bg {
-  background:#71639e !important;
+  background: var(--biz-theme-primary-color) !important;
 }
 
 .o_calendar_renderer .fc-view .o_calendar_color_11.fc-event {
